# raytracer

./: .gitignore  Cargo.toml  README.md  camera.json
3mf/: 3dmodel.model  model.3mf
examples/animate/: config.json
examples/first-logo/: camera.json  description.json  lighting.json
examples/teapot/: camera.json  config.json  description.json
models/first-logo/: first-logo.blend  first-logo.scad  model.mtl
models/first-logo/textures/: circle-uv.xcf  square-uv.xcf  triangle-uv.xcf
models/glass/: glass.blend  glass.scad  glass.stl  model.mtl
models/glass/textures/: plane.xcf
models/robot/: model.mtl
models/teapot/: model.mtl  teapot.blend
models/teapot/textures/: plane.xcf  teapot-uv.xcf
src/: camera.rs  config.rs  lens.rs  lighting.rs  linear_algebra.rs  load.rs  main.rs  primitive.rs  render.rs  scene.rs  wavefront.rs
src/load/: stl.rs  wavefront.rs
src/render/: camera.rs  lens.rs
src/scene/: lighting.rs  primitive.rs
