[package]
name = "raytracer"
version = "0.2.0"
authors = ["Brendan Burkhart <brendan.f.burkhart@gmail.com>"]
edition = "2018"

[dependencies]
approx = "0.3.2"
image = "0.23.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
rayon = "1.3.0"
obj = "0.9.1"
clap = "3.0.0-beta.2"
opencv = { version = "0.46", default-features=false, features = ["opencv-4", "buildtime-bindgen"] }


[profile.release]
opt-level=3
lto=true
